data/derived/sp14/progs/unify/prog3456.ml.out
Characters 96-110:
  | Average (a1,a2) -> (eval(VarX,x,y) + eval(VarY,a1,a2));;
                        ^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
